<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signup.fragments.SelectPasswordSignUpFragment">

    <TextView
        android:id="@+id/select_password_sign_up_fragment_info"
        style="@style/description2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strength_password_information"
        android:textAlignment="viewStart" />

    <LinearLayout
        android:id="@+id/strength_password_component_condition_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/strength_password_component_condition_1_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_red_ic" />

        <TextView
            style="@style/description_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:text="@string/strength_password_condition_1"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/strength_password_component_condition_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/strength_password_component_condition_2_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_red_ic" />

        <TextView
            style="@style/description_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:text="@string/strength_password_condition_2"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/strength_password_component_condition_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/strength_password_component_condition_3_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_red_ic" />

        <TextView
            style="@style/description_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:text="@string/strength_password_condition_3"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/strength_password_component_condition_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/strength_password_component_condition_4_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_red_ic" />

        <TextView
            style="@style/description_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:text="@string/strength_password_condition_4"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/strength_password_component_condition_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/strength_password_component_condition_5_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_red_ic" />

        <TextView
            style="@style/description_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:text="@string/strength_password_condition_5"
            android:textAlignment="viewStart" />
    </LinearLayout>

</LinearLayout>