<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0"
        app:layout_constraintBottom_toTopOf="@+id/create_patient_button_container"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/create_patient_activity_image"
                android:layout_width="@dimen/d_120"
                android:layout_height="@dimen/d_120"
                android:layout_marginTop="@dimen/d_24"
                android:src="@drawable/jess_image"
                app:civ_border_color="@color/pink_app"
                app:civ_border_width="@dimen/d_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/change_photo"
                style="@style/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_16"
                android:text="@string/change_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_patient_activity_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_patient_activity_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d_24"
                android:layout_marginTop="@dimen/d_48"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/change_photo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_patient_activity_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_patient_activity_birthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d_24"
                android:layout_marginTop="@dimen/d_24"
                android:hint="@string/sign_up_activity_birthday"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/create_patient_activity_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_patient_activity_birthday_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_patient_activity_crn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d_24"
                android:layout_marginTop="@dimen/d_24"
                android:hint="@string/sign_up_activity_crn"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/create_patient_activity_birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_patient_activity_crn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_patient_activity_uf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_24"
                android:layout_marginTop="@dimen/d_24"
                android:hint="@string/uf"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/create_patient_activity_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_patient_activity_crn">

                <AutoCompleteTextView
                    android:id="@+id/create_patient_activity_uf_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_patient_activity_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/d_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_24"
                android:layout_marginEnd="@dimen/d_24"
                android:hint="@string/city"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_patient_activity_uf"
                app:layout_constraintTop_toBottomOf="@+id/create_patient_activity_crn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_patient_activity_city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/create_patient_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/d_16"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/create_patient_continue_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_24"
            android:layout_marginBottom="@dimen/d_24"
            android:text="@string/continue_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
